Small usability tweaks for the Evaluations screens

--- a/app/views/evaluations/_assignments.html.erb
+++ b/app/views/evaluations/_assignments.html.erb
@@ -3,7 +3,7 @@
     <thead><%= grades_header %></thead>
   </table>
 
-  <div style="height: 500px; overflow:auto;">
+  <div class='fixed-table'>
     <table class='master fixed-grid'>
       <tbody>
         <%= grades_body %>
