--- a/app/views/evaluations/_comments.html.erb
+++ b/app/views/evaluations/_comments.html.erb
@@ -9,7 +9,7 @@
       </thead>
     </table>
 
-    <div style="height: 500px; overflow:auto;">
+    <div class='fixed-table'>
       <table class="fixed-grid master">
         <thead>
         </thead>
