--- a/app/views/evaluations/_skills.html.erb
+++ b/app/views/evaluations/_skills.html.erb
@@ -3,7 +3,7 @@
     <thead><%= skills_header %></thead>
   </table>
 
-  <div style="height: 500px; overflow:auto;">
+  <div class='fixed-table'>
     <table class="fixed-grid master">
       <thead>
       </thead>
