--- a/public/stylesheets/local.css
+++ b/public/stylesheets/local.css
@@ -90,7 +90,7 @@ tr.help td {
 }
 tr.help:hover td{background-color: #009900;}
 .paginate {text-align: center;}
-
+div.fixed-table { max-height:500px; overflow:auto; }
 
 /*** Forms ***/
 .spacer {padding-left:80px; color:#555555; padding-top: 20px;}
