Evaluations - Comments tab work  * It is finally complete and working pretty well.  Closes #11  * Allows for drag-and-drop functionality with Quick Messages  * Auto-replaces keywords in the quick messages.  Currently only "%fn = Student First Name" is implemented.

--- a/app/views/evaluations/_comments.html.erb
+++ b/app/views/evaluations/_comments.html.erb
@@ -1,17 +1,12 @@
 <div class="span-14">
   <form id="comments_grid">
-    <table class='master fixed-grid fixed-grid-header'>
-      <thead>
+    <div>
+      <table class="fixed-grid master">
+        <thead>
         <tr>
           <th width='100'>Student Name</th>
           <th>Comments</th>
         </tr>
-      </thead>
-    </table>
-
-    <div class='fixed-table'>
-      <table class="fixed-grid master">
-        <thead>
         </thead>
         <tbody>
           <%= comments_body %>
