Minor change to allow clicking on the logo

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,9 @@
     <div class='container showgri'>
       <div id='header' class='span-25 last'>
 
-        <div class='span-2'><img class='top' src='/images/logo.png' alt="logo" width='60px' height='60px' /></div>
+        <div class='span-2'>
+          <a href='/'><img class='top' src='/images/logo.png' alt="logo" width='60px' height='60px' /></a>
+        </div>
 
         <% cache 'layout_header' do %>
         <div class='span-12'>
