CourseType  * re-added CourseType to allow the organization of report cards  * Modified the Course edit screen to allow for changing its type  * Added a CourseType settings screen to allow for maintaining course types

--- a/app/views/courses/edit.html.erb
+++ b/app/views/courses/edit.html.erb
@@ -12,7 +12,10 @@
       <%= f.text_field :name %>
       <br />
       <%= f.label :grading_scale_id, {}, :class => 'req' %>
-      <%= collection_select :course, :grading_scale_id, GradingScale.find(:all), :id, :name %>
+      <%= collection_select :course, :grading_scale_id, GradingScale.active, :id, :name %>
+      <br />
+      <%= f.label :course_type_id, {}, :class => 'req' %>
+      <%= collection_select :course, :course_type_id, CourseType.active, :id, :name %>
     <% end %>
 
     <div class="spacer">
