--- a/app/views/settings/_settings_list.erb
+++ b/app/views/settings/_settings_list.erb
@@ -7,6 +7,7 @@
   {:name => 'Site Defaults', :url => '/settings/site_defaults'},
   {:name => 'Supporting Skills', :url => '/settings/supporting_skill_categories'},
   {:name => 'Supporting Skill Codes', :url => '/settings/supporting_skill_codes'},
+  {:name => 'Course Types', :url => '/settings/course_types'},
 ]
 %>
 
