--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,12 +4,10 @@
     <meta charset='UTF-8'>
     <title><%= StaticData.site_name %> - <%= controller.controller_name.humanize %></title>
 
-    <%= stylesheet_link_tag 'screen', 'menu', 'tabs', 'local', :cache => false -%>
+    <%= stylesheet_link_tag 'screen', 'menu', 'tabs', 'local', :cache => true -%>
 
-    <%= javascript_include_tag "http://ajax.googleapis.com/ajax/libs/prototype/1.6.0.3/prototype" -%>
-    <%= javascript_include_tag "http://ajax.googleapis.com/ajax/libs/scriptaculous/1.8.2/scriptaculous" -%>
-
-    <%= javascript_include_tag 'livepipe', 'tabs', 'scal', 'tablekit', 'event.simulate', 'application', :cache => false -%>
+    <%= javascript_include_tag 'protoaculous.1.8.3.min', 'livepipe', 'tabs',
+      'scal', 'tablekit', 'event.simulate', 'application', :cache => true -%>
     <% javascript_tag do %>
       TableKit.options.rowEvenClass = 'even';
       TableKit.options.rowOddClass = 'odd';
