Minor fix for Grades  * When the student/parent views their grades make sure to show and not just the first term.

--- a/app/views/grades/index.html.erb
+++ b/app/views/grades/index.html.erb
@@ -1,5 +1,5 @@
 <% content_for :left do %>
-  <%= render :partial => 'courses/course_list', :object => @courses %>
+  <%= render :partial => 'course_list', :object => @courses %>
 <% end %>
 
 <h2>
