--- a/app/views/grades/show.html.erb
+++ b/app/views/grades/show.html.erb
@@ -1,5 +1,5 @@
 <% content_for :left do %>
-  <%= render :partial => 'courses/course_list', :object => @courses %>
+  <%= render :partial => 'course_list', :object => @courses %>
 <% end %>
 
 <h2>
