--- a/public/stylesheets/local.css
+++ b/public/stylesheets/local.css
@@ -46,9 +46,10 @@ h3 {border-bottom: 1px solid #DDD;}
   font-weight: bolder;
   margin: 5px 10px;
   padding: 0 10px;
+  text-align: center;
 }
 
-.checklist, .checklist li { margin: 0; padding: 0; }
+.checklist, .checklist tr { margin: 0; padding: 0; }
 
 .checklist label {
   display: block;
