--- a/app/views/evaluations/_summary.html.erb
+++ b/app/views/evaluations/_summary.html.erb
@@ -16,7 +16,7 @@
     </tr>
 
 
-    <% @course_term.course_term_skills.in_groups_of(3, "blah") do |row_ctskills| %>
+    <% @course_term.course_term_skills.in_groups_of(3, false) do |row_ctskills| %>
       <tr>
         <% for ctskill in row_ctskills %>
           <% score = ctskill.score(student) %>
