--- a/app/views/evaluations/_summary.html.erb
+++ b/app/views/evaluations/_summary.html.erb
@@ -1,36 +1,38 @@
 <table class="simple box">
+
   <% @course_term.students.sort_by {|a| a.last_name }.each do |student| %>
-    <% grade = @course_term.calculate_grade(student) %>
-    <thead>
-      <tr>
-        <td>
-          <%= h "#{grade[:letter]} (#{grade[:score].round}%) - #{student.full_name}" %>
-        </td>
-        <td></td><td></td>
-      </tr>
-    </thead>
-    <tr>
-      <td colspan="3">
-        "<%= h @course_term.comments(student) %>"
-      </td>
-    </tr>
-
-
-    <% @course_term.course_term_skills.in_groups_of(3, false) do |row_ctskills| %>
-      <tr>
-        <% for ctskill in row_ctskills %>
-          <% score = ctskill.score(student) %>
-          <td>
-            <%= score.empty? ? "&nbsp;&nbsp;" : score %>
-            <%= h " \"#{ctskill.supporting_skill.description}\"" %>
+  <thead><th><td colspan="3"><%= h student.full_name %></td></th></thead>
+    <% @course_term.course.course_terms.each do |ct| %>
+      <% grade = ct.calculate_grade(student) %>
+      <thead>
+        <tr>
+          <td colspan="3">
+            <%= h "#{ct.term.name}: #{grade[:letter]} (#{grade[:score].round}%)" %>
           </td>
-        <% end %>
+        </tr>
+      </thead>
+      <tr>
+        <td colspan="3">
+          "<%= h ct.comments(student) %>"
+        </td>
       </tr>
+
+
+      <% ct.course_term_skills.in_groups_of(3, false) do |row_ctskills| %>
+        <tr>
+          <% for ctskill in row_ctskills %>
+            <% score = ctskill.score(student) %>
+            <td>
+              <%= score.empty? ? "&nbsp;&nbsp;" : score %>
+              <%= h " \"#{ctskill.supporting_skill.description}\"" %>
+            </td>
+          <% end %>
+        </tr>
+      <% end %>
+
+      <tr class="spacer"><td colspan="3">&nbsp;</td></tr>
     <% end %>
-
-    <tr class="spacer"><td colspan="3">&nbsp;</td></tr>
   <% end %>
-
 </table>
 
 
