Minor optimizations to the course_term listing.  Fortunately, its cached in production so this wont hurt/help too much.

--- a/app/views/shared/_course_term_list.html.erb
+++ b/app/views/shared/_course_term_list.html.erb
@@ -25,6 +25,7 @@
     </table>
   </div>
 
+  <%# OPTIMIZE: This code forces a highlight on the course listing. %>
   <% javascript_tag do -%>
     $('courses').down('tbody').childElements().each(function(e) {
     if (top.location.pathname.include(e.down().down().readAttribute('href'))) {
