--- a/app/views/users/_user_types.html.erb
+++ b/app/views/users/_user_types.html.erb
@@ -1,26 +1,19 @@
-<% 
-	# NOTE: I'm 'not sure why using 'object.new' works here, but it does :/  
-%>
-
-<% types = User.find_user_types(:all) %>
-
 <table id="types" class="master">
   <thead>
     <tr>
-    <th>Type</th>
-    <th></th>
+      <th>Type</th>
+      <th></th>
     </tr>
   </thead>
-	<tbody>
-		<% types.sort.each { |key, value| %>
-			<% object = value.to_s.camelize.singularize.constantize  %>
-			<% object_path = url_for object.new %>
-			<tr class="<%= cycle('odd', 'even') + (current_page?(:controller => object_path) ? ' current' : '') %>" 
-					onclick="location.href='<%= url_for(object_path) %>'">
-				<%= content_tag :td, link_to(key, object_path) %>
-				<td><%= button_to( 'Add', object_path + '/new', :method => :get, :class => 'btn standard sml' ) if key != 'ALL' %></td>
-			</tr>
-		<% } %>
+  <tbody>
+    <% User.user_types.each do |key, value| %>
+      <% url = %W{/users #{value.try(:name).try(:tableize)}}.join('/') %>
+      <tr class="<%= cycle('odd', 'even')%>" onclick="location.href='<%= url -%>'">
+            <%= content_tag :td, key %>
+            <%= content_tag :td, value.nil? ? '' : button_to( 
+              'New', "#{url}/new", :method => :get, :class => 'btn standard sml' ) %>
+      </tr>
+    <% end %>
   </tbody>
 </table>
 
