User view mods * Modified the user_types method to sort the results in a sane way * Modified each user to properly use the homeroom and user_types changes

--- a/app/views/users/_edit.html.erb
+++ b/app/views/users/_edit.html.erb
@@ -40,7 +40,8 @@
 
         <%= f.label :homeroom %>
         <%= text_field_tag :homeroom1, {}, :maxlength => 20 %>
-        <%= f.select :homeroom, @homerooms, :include_blank => true %>
+        <%#= f.select :homeroom, @homerooms, :include_blank => true %>
+        <%= collection_select :student, :homeroom, @homerooms, :homeroom, :homeroom %>
       <% end %>
 
       <div class="spacer">
