--- a/app/views/users/_user_types.html.erb
+++ b/app/views/users/_user_types.html.erb
@@ -6,12 +6,13 @@
     </tr>
   </thead>
   <tbody>
-    <% User.user_types.each do |key, value| %>
+    <% User.user_types.each do |type| %>
+      <% key,value = type.shift %>
       <% url = %W{/users #{value.try(:name).try(:tableize)}}.join('/') %>
-      <tr class="<%= "#{cycle('odd', 'even')} #{value.nil? || current_page?(:controller => url) ? ' current' : ''}"%>"
+      <tr class="<%= "#{cycle('odd', 'even')}  #{value.nil? || !current_page?(:controller => url) ? '' : ' current'}" %>"
           onclick="location.href='<%= url -%>'">
             <%= content_tag :td, key %>
-            <%= content_tag :td, value.nil? ? '' : button_to( 
+            <%= content_tag :td, value.nil? ? '' : button_to(
               'New', "#{url}/new", :method => :get, :class => 'btn standard sml' ) %>
       </tr>
     <% end %>
