--- a/app/views/users/_user_types.html.erb
+++ b/app/views/users/_user_types.html.erb
@@ -8,8 +8,18 @@
   <tbody>
     <% User.user_types.each do |type| %>
       <% key,value = type.shift %>
-      <% url = %W{/users #{value.try(:name).try(:tableize)}}.join('/') %>
-      <tr class="<%= "#{cycle('odd', 'even')}  #{value.nil? || !current_page?(:controller => url) ? '' : ' current'}" %>"
+      <% if Class == value.class %>
+        <% url = %W{/users #{value.try(:name).try(:tableize)}}.join('/') %>
+        <% current = current_page?(:controller => url) %>
+      <% elsif !type[:name].nil? %>
+        <% url = "/users/#{type[:name]}" %>
+        <% current = true if current_page?(:action => type[:name]) %>
+      <% else %>
+        <% url = "/users" %>
+        <% current = current_page?(:controller => url) %>
+      <% end %>
+
+      <tr class="<%= "#{cycle('odd', 'even')}  #{current ? ' current' : ''}" %>"
           onclick="location.href='<%= url -%>'">
             <%= content_tag :td, key %>
             <%= content_tag :td, value.nil? ? '' : button_to(
